@@ -1,3 +1,11 @@
+Development Portal (2019-01-02 shi)
+==============================
+Update css for all themes with new sections
+Minor css fixes
+Add humanitarian tag in print-friendly css
+Remove list numbers for location and policy markers in SAVi
+
+
 Development Portal (2018-12-19 shi)
 ==============================
 Add activity-scope code list to iati_codes.js
